# PBR-Shader-Tool-OpenGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Principal_Shader_Open_GL/: main.cpp  mesh_utils.cpp  mesh_utils.h  shader_utils.cpp  shader_utils.h  texture_utils.cpp  texture_utils.h  uniforms.cpp  uniforms.h
Principal_Shader_Open_GL/shaders/: basic.frag  basic.vert  cubemap_vertex.vert  equirect_to_cubemap.frag  irradiance_convolution.frag  skybox.frag  skybox.vert
Principal_Shader_Open_GL/textures/briefcase/: source.txt
